<resources>
    <string name="app_name">TakTakAndroid</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="or">Or</string>
    <string name="create_an_account">Create an account</string>
    <string name="joinUS">Join us!</string>
    <string name="address">Address</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="speciality">Speciality</string>
    <string name="identity">Identity</string>
    <string name="types_of_services">Types of services</string>
    <string name="installation">Installation</string>
    <string name="repair">Repair</string>
    <string name="maintenance">Maintenance</string>
    <string name="availability_per_week">Availability per week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="as_a_customer">As a customer</string>
    <string name="as_a_service_provider">As a service Provider</string>
    <string name="enter_verification_code">Enter verification code!</string>
    <string name="verify">Verify</string>
    <string name="if_you_didn_t_receive_a_code">If you didn\'t receive a code!</string>
    <string name="resend">Resend</string>
    <string name="send">Send</string>
    <string name="old_password">Old password</string>
    <string name="save_changes">Save changes</string>
    <string name="change_password">Change password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="work_description">Work description</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="notifications">Notifications</string>
    <string name="english">English</string>
    <string name="postpone">Postpone</string>
    <string name="balance">Balance</string>
    <string name="withdraw">Withdraw</string>
    <string name="minutes">Minutes</string>
    <string name="proceed">Proceed</string>
    <string name="save">Save</string>
    <string name="switch_to_pro">Switch to Pro</string>
    <string name="date_and_time">Date and Time</string>
    <string name="type_of_service">Type of service</string>
    <string name="request_from">Request form</string>
    <string name="description_of_request">Description of request</string>
    <string name="location">Location</string>
    <string name="add_request">Add Request</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discard">Discard</string>
    <string name="error">Error</string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="here">I\'m here</string>
    <string name="work_is_done">Work is done</string>
    <string name="appointments">Appointments</string>
    <string name="apt">Appointment</string>
    <string name="appointments_archive">Appointments Archive</string>
    <string name="requests_archive">Requests Archive</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="bids">Bids</string>
    <string name="bid">Bid</string>
    <string name="auction_house">Auction House</string>
    <string name="pending_appointments">Pending Appointments</string>
    <string name="pending_bids">Pending Bids</string>
    <string name="request_form">Request Form</string>
    <string name="make_bid">Make Bid</string>
    <string name="my_bids">My Bids</string>
    <string name="tradespersons">TradesPersons</string>
    <string name="update_password">Update Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="cancel">Cancel</string>
    <string name="rate_pay">Rate and Pay</string>
    <string name="generate_code">Generate QR code</string>
    <string name="warning">Warning</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="server_failure">Failed to connect to the server!</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="payment_link_sent">Payment link sent!</string>
    <string name="pwd_updated">Password updated!</string>
    <string name="work_desc_updated">Work description updated!</string>
    <string name="apt_booked">Appointment booked!</string>
    <string name="apt_canceled">Appointment canceled!</string>
    <string name="firstname_empty">Firstname cannot be empty!</string>
    <string name="lastname_empty">Lastname cannot be empty!</string>
    <string name="address_empty">Address should contain at least 3 characters!</string>
    <string name="no_sps">No service providers found!</string>
    <string name="no_notifs">No notifications found!</string>
    <string name="no_apts">No appointments found!</string>
    <string name="no_bids">No bids found!</string>
    <string name="no_pending_apts">No pending appointments found!</string>
    <string name="archive_empty">Archive is empty!</string>
    <string name="work_days_cannot_be_empty">Work days cannot be empty!</string>
    <string name="types_of_services_cannot_be_empty">Types of services cannot be empty!</string>
    <string name="no_requests_found">No requests found!</string>
    <string name="send_by_email"><u>Click here to send payment link by email!</u></string>
    <string name="check_payment">Check payment</string>
    <string name="payment_succeeded">Payment succeeded!</string>
    <string name="rate">Rate service</string>
    <string name="server_connection_failed">Server connection failed!</string>
    <string name="bid_supprimé">Bid deleted!</string>
    <string name="bid_accepted_apt_created">Bid Accepted and appointment created!</string>
    <string name="bid_declined">Bid declined!</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="pwd_cannot_be_empty">Password cannot be empty!</string>
    <string name="cant_sign_in_google">Couldn\'t sign in!</string>
    <string name="otp_sent_successfully">OTP sent successfully!</string>
    <string name="wrong_otp">Wrong OTP!</string>
    <string name="otp_cannot_be_empty">OTP cannot be empty!</string>
    <string name="first_name_cant_be_empty">First Name cannot be empty!</string>
    <string name="last_name_cant_be_empty">Last Name cannot be empty!</string>
    <string name="address_cant_be_empty">Address cannot be empty!</string>
    <string name="pwd_should_be_8cahars">Password should be: 8+ chars, mix of letters/numbers, 1 uppercase</string>
    <string name="specilality_cant_be_empty">Speciality cannot be empty!</string>
    <string name="enter_valid_cin">Enter a valid CIN number!</string>
    <string name="tos_cant_be_empty">Types of services cannot be empty!</string>
    <string name="working_days_cant_be_empty">Working days cannot be empty!</string>
    <string name="old_pwd_cant_be_empty">Old password cannot be empty!</string>
    <string name="date_cannot_be_empty">Date cannot be empty!</string>
    <string name="location_cannot_be_empty">Location cannot be empty!</string>
    <string name="please_enter_valid_desc">Please enter a valid description!</string>
    <string name="desc_atleast_3_charac">Description should at least contain 3 characters!</string>
    <string name="request_deleted">Request deleted!</string>
    <string name="cannot_delete_request">Cannot delete request!</string>
    <string name="wallet_access_authentication">Authentication</string>
    <string name="failed_to_cancel_apt">Failed to cancel appointment!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="price">Price</string>
    <string name="dt">TND</string>
    <string name="a">in</string>
    <string name="request_closed">The related request is closed!</string>
    <string name="apt_not_found">Appointment not found!</string>
    <string name="turn_on_location">Please turn on your location!</string>
    <string name="not_work_day">Selected day is not a workday!</string>
    <string name="insufficient_funds">Cannot withdraw due to insufficient funds!</string>
    <string name="withdraw_done">Successful withdrawal! Check email for details.</string>
    <string name="amount_too_small">Amount should be greater than 5TND!</string>
    <string name="op_failed">Operation Failed!</string>
    <string name="scan_guide">Scan Guide</string>
    <string name="scan_help_sentence">Scan your CIN correctly by following this guide.</string>
    <string name="cam_permission_required">Camera permission is required!</string>
    <string name="error_opening_scanner">Error encountered when opening Scanner!</string>
    <string name="delete_account_warning">Are you sure you want to delete your account permanently?</string>
    <string name="restart">Restart</string>
    <string name="should_restart">You should restart the app</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="mn">minutes</string>
    <string name="seconds">seconds</string>
    <string name="left">left</string>
    <string name="search_by_name_or_spec">Search by name or speciality</string>
    <string name="search_by_tos">Search by type of service</string>
    <string name="search_by_name_or_tos">Search by name or type of service</string>
    <string name="search">Search</string>
    <string name="payment_is_pending">Payment is pending!</string>
</resources>